manifests/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 5050
#    nodePort: 30050
    targetPort: 5050
